--- a/GRChombo/config/database.yml
+++ b/GRChombo/config/database.yml
@@ -1,25 +1,37 @@
-# SQLite version 3.x
-#   gem install sqlite3
-#
-#   Ensure the SQLite 3 gem is defined in your Gemfile
-#   gem 'sqlite3'
-#
+# We use postgresql
+
 default: &default
-  adapter: sqlite3
+  adapter: postgresql
+  encoding: unicode
   pool: 5
-  timeout: 5000
+
 
 development:
   <<: *default
-  database: db/development.sqlite3
+  database: development
+  host: localhost
+  pool: 5
+  username: developer
+  password: dev
+
+test:
+  <<: *default
+  database: test
+  host: localhost
+  pool: 5
+  username: developer
+  password: dev
+
+# The following setting are for use on MacOS
+  #database: test_dev
+  #username: YOUR_USERNAME
+  #password:
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
-test:
-  <<: *default
-  database: db/test.sqlite3
+
 
 production:
   <<: *default
-  database: db/production.sqlite3
+  database: master #Database name
