--- a/GRChombo/config/database.yml
+++ b/GRChombo/config/database.yml
@@ -7,19 +7,19 @@ default: &default
 
 development:
   <<: *default
-  database: development
+  database: grchombo_dev
   host: localhost
   pool: 5
-  username: developer
-  password: dev
+  username: grchombo
+  password: grchombo
 
 test:
   <<: *default
-  database: test
+  database: grchombo_test
   host: localhost
   pool: 5
-  username: developer
-  password: dev
+  username: grchombo
+  password: grchombo
 
 # The following setting are for use on MacOS
   #database: test_dev
